# Prueba_compilar_macos_ui

./: .gitignore  CODE_SIGNING_GUIDE.md  GITHUB_ACTIONS_GUIDE.md  README.md  create_clean_dmg.sh  create_custom_dmg.sh  create_dmg_background.py  create_final_dmg.sh  cronux_gui_v3.py  prepare_repo.sh  pyproject.toml  sign_app.sh  test_clean_dmg.sh  update_workflows.sh
.github/workflows/: build-macos-fixed.yml  build-macos-v2.yml  build-macos.yml  release.yml
assets/: README.md
cli/: cronux_cli.py  eliminar_proyecto.py  restaurar_versiones.py  ver_historial.py
copia_win_clean/: crear_exe_pyinstaller.py  installer_gui.py
copia_win_clean/assets/: cronux_cli.icns
copia_win_clean/cli/: crear_proyecto.py  cronux_cli.py  funcion_verficar.py  guardar_version.py  info_proyecto.py
