[build-system]
requires = ["flet"]

[project]
name = "cronux-gui"
version = "3.0.0"
description = "Sistema de control de versiones local con interfaz gráfica"
authors = [
    {name = "Cronux Team", email = "info@cronux.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "flet>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/eleowebcoding/Prueba_compilar_macos_ui"
Repository = "https://github.com/eleowebcoding/Prueba_compilar_macos_ui.git"

[tool.flet]
module-name = "cronux_gui_v3"

[tool.flet.macos]
bundle-id = "com.cronux.gui"
category = "public.app-category.utilities"

[tool.flet.macos.info]
CFBundleName = "Cronux"
CFBundleDisplayName = "Cronux"
CFBundleShortVersionString = "3.0.0"
NSHumanReadableCopyright = "Copyright © 2024 Cronux"
NSHighResolutionCapable = true
LSMinimumSystemVersion = "10.15.0"